# bsk_sdk

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  README.md  build_backend.py  pyproject.toml
.github/actions/build-sdk-wheel/: action.yml
.github/actions/install-bsk-from-source/: action.yml
.github/actions/setup-bsk/: action.yml
.github/workflows/: ci.yml  nightly.yml  publish-wheels.yml
cmake/: bsk-sdkConfig.cmake.in  bsk_add_python_module.cmake  bsk_add_rust_module.cmake  bsk_add_swig_module.cmake  bsk_generate_messages.cmake
examples/: scenarioNumbaAtmosphereExtension.py
examples/custom-atm-extension/: CMakeLists.txt  README.md  pyproject.toml
examples/custom-atm-extension/customExponentialAtmosphere/: README.md  customExponentialAtmosphere.cpp  customExponentialAtmosphere.h  customExponentialAtmosphere.i
examples/custom-atm-extension/customExponentialAtmosphere/_UnitTest/: test_customExponentialAtmosphere.py
examples/custom-atm-extension/custom_atm/: README.md  __init__.py
examples/custom-atm-extension/messages/: README.md
examples/custom-atm-extension/numbaAtmosphere/: README.md  numbaAtmosphere.py
examples/custom-atm-extension/numbaAtmosphere/_UnitTest/: test_numbaAtmosphere.py
examples/custom-atm-extension/planetStateProbe/: planetStateProbe.c  planetStateProbe.h
examples/custom-atm-plugin/: CMakeLists.txt  README.md  pyproject.toml  test_atm_plugin.py
examples/custom-atm-plugin/customExponentialAtmosphere/: README.md  customExponentialAtmosphere.cpp  customExponentialAtmosphere.h  customExponentialAtmosphere.i
examples/custom-atm-plugin/customExponentialAtmosphere/_UnitTest/: test_customExponentialAtmosphere.py
examples/custom-atm-plugin/custom_atm/: README.md  __init__.py
examples/custom-atm-plugin/messages/: README.md
examples/custom-atm-plugin/planetStateProbe/: planetStateProbe.h
examples/custom-atm-plugin/swig/: customExponentialAtmosphere.i
examples/rust-mrp-plugin/: .gitignore  CMakeLists.txt  README.md  pyproject.toml  scenarioAttitudeFeedbackRust.py
examples/rust-mrp-plugin/mrpRustController/: Cargo.toml  __init__.py  build.rs
examples/rust-mrp-plugin/mrpRustController/_UnitTest/: test_mrpRustController.py  test_scenarioAttitudeFeedbackRust.py
examples/rust-mrp-plugin/mrpRustController/src/: lib.rs
rust/bsk_build/: Cargo.toml
rust/bsk_build/src/: lib.rs
rust/bsk_messages/: Cargo.toml
rust/bsk_utilities/: Cargo.toml
rust/bsk_utilities/src/: lib.rs  raw.rs
src/bsk_sdk/: __init__.py
tests/: test_cmake_shared_runtime.py  test_smoke.py  test_sync_all.py
tests/cmake/shared_runtime/: CMakeLists.txt
tools/: _sync_paths.py  common.py  gen_rust_messages.py  gen_rust_utilities.py  sync_all.py  sync_c_msg_interfaces.py  sync_headers.py  sync_runtime.py  sync_rust.py  sync_sources.py  sync_swig.py
tools/msgAutoSource/: generateSWIGModules.py
