[build-system]
requires = ["scikit-build-core>=0.9.3"]
build-backend = "build_backend"
backend-path = ["."]

[project]
name = "bsk-sdk"
version = "2.9.1"
description = "Vendored Basilisk SDK headers, runtime, and CMake integration for plugin authors"
readme = "README.md"
license = { text = "ISC" }
requires-python = ">=3.9"
dependencies = [
  # Plugin authors compile SWIG extensions against bsk. The pip swig package
  # provides a self-contained binary on all platforms and is detected
  # automatically by bsk_add_swig_module.cmake via the Python interpreter.
  #
  # SWIG 4.4.0 bumped SWIG_RUNTIME_VERSION from "4" to "5", changing the
  # capsule name from swig_runtime_data4 to swig_runtime_data5. bsk is built
  # with SWIG 4.3.1 (runtime version 4), so plugins must also use a <4.4
  # SWIG to share the same type table and make cross-module type casts work.
  "swig>=4.2.1,<=4.3.1",
]

[project.entry-points."cmake.prefix"]
bsk-sdk = "bsk_sdk"

[tool.scikit-build]
wheel.packages = ["bsk_sdk"]
wheel.py-api = "cp39"
wheel.install-dir = "bsk_sdk"

sdist.include = [
  "CMakeLists.txt",
  "cmake/**",
  "src/bsk_sdk/include/**",
  "src/bsk_sdk/include_compat/**",
  "src/bsk_sdk/arch_min/**",
  "src/bsk_sdk/runtime_min/**",
  "src/bsk_sdk/swig/**",
  "tools/**",
  "src/bsk_sdk/__init__.py",
  "src/bsk_sdk/_bsk_version.txt",
]

sdist.exclude = [
  "**/__pycache__/**",
  "**/*.pyc",
]

[tool.scikit-build.cmake]
version = ">=3.26"

# ---------------------------------------------------------------------------
# cibuildwheel
# ---------------------------------------------------------------------------
[tool.cibuildwheel]
# Build CPython 3.9–3.13; skip PyPy and 32-bit Linux.
build = "cp39-* cp310-* cp311-* cp312-* cp313-*"
skip  = ["*-musllinux*", "*-manylinux_i686*", "*-win32"]

# Eigen3 is fetched automatically by CMake (FetchContent) if not found locally —
# no before-all installation step needed on any platform.
