[build-system]
requires = ["scikit-build-core>=0.9.3"]
build-backend = "build_backend"
backend-path = ["."]

[project]
name = "bsk-sdk"
version = "2.10.0"
description = "Vendored Basilisk SDK headers, runtime, and CMake integration for plugin authors"
readme = "README.md"
license = { text = "ISC" }
requires-python = ">=3.9"
dependencies = [
  # Plugin authors compile SWIG extensions against bsk. The pip swig package
  # provides a self-contained binary on all platforms and is detected
  # automatically by bsk_add_swig_module.cmake via the Python interpreter.
  #
  # SWIG 4.4.0 bumped SWIG_RUNTIME_VERSION from "4" to "5", changing the
  # capsule name from swig_runtime_data4 to swig_runtime_data5. bsk is built
  # with SWIG 4.3.1 (runtime version 4), so plugins must also use a <4.4
  # SWIG to share the same type table and make cross-module type casts work.
  "swig>=4.2.1,<=4.3.1",
  # Required by generatePayloadMetaJson.py, which parses *Payload.h structs at
  # plugin build time to produce the JSON metadata consumed by generateSWIGModules.py.
  "libclang>=15.0.6.1,<=18.1.1",
]

[project.entry-points."cmake.prefix"]
bsk-sdk = "bsk_sdk"

[tool.scikit-build]
wheel.packages = ["bsk_sdk"]
# SDK content is source/header-only, so this wheel is pure Python and
# should not carry ABI/platform tags.
wheel.py-api = "py3"
wheel.platlib = false
wheel.install-dir = "bsk_sdk"

sdist.include = [
  "CMakeLists.txt",
  "cmake/**",
  "src/bsk_sdk/include/**",
  "src/bsk_sdk/include_compat/**",
  "src/bsk_sdk/arch_min/**",
  "src/bsk_sdk/runtime_min/**",
  "src/bsk_sdk/swig/**",
  "tools/**",
  "src/bsk_sdk/__init__.py",
  "src/bsk_sdk/_bsk_version.txt",
]

sdist.exclude = [
  ".github/**",
  "build/**",
  "dist/**",
  "docs/**",
  "examples/**",
  "external/**",
  "tests/**",
  "**/__pycache__/**",
  "**/*.pyc",
]

[tool.scikit-build.cmake]
version = ">=3.26"

# Eigen3 is fetched automatically by CMake (FetchContent) if not found locally —
# no before-all installation step needed on any platform.
