[build-system]
requires = ["scikit-build-core>=0.9.3"]
build-backend = "build_backend"
backend-path = ["."]

[project]
name = "bsk-sdk"
version = "2.11.0"
description = "Vendored Basilisk SDK headers, runtime, and CMake integration for plugin authors"
readme = "README.md"
license = { text = "ISC" }
requires-python = ">=3.9"
dependencies = [
  # Plugin authors compile SWIG extensions against bsk. The pip swig package
  # provides a self-contained binary on all platforms and is detected
  # automatically by bsk_add_swig_module.cmake via the Python interpreter.
  #
  # SWIG 4.4.1+ uses SWIG_RUNTIME_VERSION "5" (epoch 5), which bsk also uses
  # from 2.10.1 onward. Both bsk and bsk-sdk require >=4.4.1 to stay on epoch 5.
  # The cmake check in bsk_add_swig_module enforces the match at build time.
  "swig==4.4.1",
  # Required by generatePayloadMetaJson.py, which parses *Payload.h structs at
  # plugin build time to produce the JSON metadata consumed by generateSWIGModules.py.
  "libclang>=15.0.6.1,<=18.1.1",
]

[project.entry-points."cmake.prefix"]
bsk-sdk = "bsk_sdk"

[tool.scikit-build]
wheel.packages = ["bsk_sdk"]
# SDK sources and headers are compiled into each plugin at plugin build time,
# so this wheel carries no native artifacts and is genuinely platform-neutral.
wheel.py-api = "py3"
wheel.platlib = false
wheel.install-dir = "bsk_sdk"

sdist.inclusion-mode = "explicit"
sdist.include = [
  "pyproject.toml",
  "build_backend.py",
  "README.md",
  "CMakeLists.txt",
  "cmake/**",
  "src/bsk_sdk/include/**",
  "src/bsk_sdk/include_compat/**",
  "src/bsk_sdk/arch_min/**",
  "src/bsk_sdk/arch_utilities/**",
  "src/bsk_sdk/runtime_min/**",
  "src/bsk_sdk/swig/**",
  "tools/**",
  "src/bsk_sdk/__init__.py",
  "src/bsk_sdk/_bsk_version.txt",
]

sdist.exclude = [
  ".github/**",
  "build/**",
  "dist/**",
  "docs/**",
  "examples/**",
  "external/**",
  "tests/**",
  ".DS_Store",
  "**/.DS_Store",
  "**/__pycache__/**",
  "**/*.pyc",
]

[tool.scikit-build.cmake]
version = ">=3.26"

# Eigen3 is fetched automatically by CMake (FetchContent) if not found locally —
# no before-all installation step needed on any platform.
