[build-system]
requires = ["scikit-build-core>=0.9.3", "numpy>=1.24", "bsk-sdk", "bsk", "swig==4.4.1"]
build-backend = "scikit_build_core.build"

[project]
name = "bsk-extension-exponential-atmosphere"
version = "0.1.0"
# Install the exact BSK version reported by bsk_sdk before building; the SDK's
# CMake version guard rejects mismatched headers and runtime libraries.
dependencies = ["bsk", "numba"]

[tool.scikit-build]
wheel.packages = ["custom_atm"]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
