[build-system]
requires = ["scikit-build-core>=0.9.3", "numpy>=1.24", "bsk-sdk", "bsk", "swig>=4.2.1,<=4.3.1"]
build-backend = "scikit_build_core.build"

[project]
name = "bsk-plugin-exponential-atmosphere"
version = "0.1.0"

[tool.scikit-build]
wheel.packages = ["custom_atm"]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
