[package]
name    = "bsk-build"
version = "0.1.0"
edition = "2021"
description = "Build-script helpers for Basilisk Rust modules — generates C headers and BSK lifecycle shims from #[repr(C)] config structs."

[features]
# The codegen surface (`generate()`, called from build.rs) needs `syn`/
# `walkdir`; the `bsk_module!()` macro (called from the crate's own regular
# code, so bsk-build is also a plain `[dependencies]` entry — see the crate
# docs) does not. Default-on so `[build-dependencies]` gets full codegen
# without extra ceremony; module crates add a second, feature-less
# `[dependencies]` entry for the macro alone.
default = ["codegen"]
codegen = ["dep:syn", "dep:walkdir"]

[dependencies]
# syn: proper Rust AST parser (same technology cbindgen uses internally).
# Used to find the *Config struct in any .rs file under src/, read its
# fields and doc-comments, and produce the C header + shim.
syn  = { version = "2", features = ["full", "extra-traits"], optional = true }
# walkdir: portable recursive directory scan to find *.rs source files.
walkdir = { version = "2", optional = true }
